--- a/public/bug-whatsapp.html
+++ b/public/bug-whatsapp.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Script Bug WhatsApp - DAMX STORE</title>
+  <title>Bug WhatsApp - DAMX STORE</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #0d1117;
       color: #f0f0f0;
@@ -25,41 +24,39 @@
     h1 {
       text-align: center;
       color: #00ffe1;
-      margin-bottom: 10px;
     }
 
-    p {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #aaa;
-    }
-
-    .section {
-      margin-bottom: 30px;
-    }
-
-    .section h2 {
-      color: #00ffe1;
-      border-bottom: 1px solid #00ffe155;
-      padding-bottom: 5px;
-      margin-bottom: 15px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    ul li {
-      margin-bottom: 15px;
-      padding: 10px;
+    .product {
       background-color: #21262d;
       border-left: 5px solid #00ffe1;
-      border-radius: 5px;
+      margin-bottom: 15px;
+      padding: 15px;
+      border-radius: 6px;
     }
 
-    b {
+    .product h3 {
+      margin: 0 0 10px;
       color: #00ffe1;
+    }
+
+    .product p {
+      margin: 4px 0;
+    }
+
+    .add-to-cart {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #00ffe1;
+      color: #0d1117;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .add-to-cart:hover {
+      background-color: #00c2b2;
     }
 
     .back-btn {
@@ -72,47 +69,69 @@
       font-weight: bold;
       border-radius: 8px;
       text-align: center;
-      box-shadow: 0 0 10px #00ffe1, 0 0 30px #00ffe122;
-    }
-
-    .back-btn:hover {
-      background-color: #00c7b3;
+      box-shadow: 0 0 10px #00ffe1;
     }
 
     .btn-container {
       text-align: center;
+    }
+
+    .cart-counter {
+      float: right;
+      font-size: 14px;
+      background: #00ffe1;
+      color: #0d1117;
+      padding: 3px 8px;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>📜 SCRIPT BUG WHATSAPP</h1>
-    <p>List Harga Script WhatsApp via WA & Telegram dari DAMX STORE</p>
 
-    <div class="section">
-      <h2>📲 WhatsApp</h2>
-      <ul>
-        <li>👑 <b>AMBA CRASH</b><br>• ENC : RM7<br>• NO ENC : RM10<br>• RESELLER : RM15</li>
-        <li>👺 <b>PSYCHO CRASH</b><br>• NO ENC : RM10<br>• RESELLER : RM15</li>
-        <li>⚡ <b>NEXSUS</b><br>• NO UP : RM7<br>• FULL UP : RM10</li>
-        <li>🌪️ <b>VORTEX</b><br>• NO UP : RM5<br>• FULL UP : RM10</li>
-      </ul>
+    <div class="product">
+      <h3>👑 AMBA CRASH</h3>
+      <p>ENC: RM7</p>
+      <p>NO ENC: RM10</p>
+      <p>RESELLER: RM15</p>
+      <button class="add-to-cart" onclick="addToCart('AMBA CRASH')">Add to Cart</button>
     </div>
 
-    <div class="section">
-      <h2>📡 Telegram</h2>
-      <ul>
-        <li>🀄 <b>MAHJONG</b><br>• NO UP : RM10<br>• UPDATE 3X : RM14<br>• PERMANENT : RM20</li>
-        <li>🍥 <b>CIKIWIR</b><br>• NO UP : RM7<br>• FULL UP : RM12</li>
-        <li>💠 <b>TREDICT</b><br>• FULL UP : RM30<br>• RESELLER : RM40</li>
-        <li>⚡ <b>ZEUS</b><br>• NO UP : RM11<br>• UPDATE 3X : RM15<br>• PERMANENT : RM25</li>
-        <li>🐉 <b>DRAGON</b><br>• NO UP : RM4<br>• UPDATE 5X : RM6<br>• UPDATE 7X : RM7<br>• PERMANENT : RM10<br>• RESELLER : RM15</li>
-      </ul>
+    <div class="product">
+      <h3>👺 PSYCHO CRASH</h3>
+      <p>NO ENC: RM10</p>
+      <p>RESELLER: RM15</p>
+      <button class="add-to-cart" onclick="addToCart('PSYCHO CRASH')">Add to Cart</button>
+    </div>
+
+    <div class="product">
+      <h3>⚡ NEXSUS</h3>
+      <p>NO UP: RM7</p>
+      <p>FULL UP: RM10</p>
+      <button class="add-to-cart" onclick="addToCart('NEXSUS')">Add to Cart</button>
+    </div>
+
+    <div class="product">
+      <h3>🌪️ VORTEX</h3>
+      <p>NO UP: RM5</p>
+      <p>FULL UP: RM10</p>
+      <button class="add-to-cart" onclick="addToCart('VORTEX')">Add to Cart</button>
     </div>
 
     <div class="btn-container">
       <a href="produk.html" class="back-btn">⬅ Kembali ke Produk</a>
     </div>
   </div>
+
+  <script>
+    function addToCart(item) {
+      alert("✅ " + item + " telah dimasukkan ke dalam cart!");
+      // Simpan ke localStorage (boleh digunakan di halaman checkout)
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      cart.push(item);
+      localStorage.setItem('cart', JSON.stringify(cart));
+    }
+  </script>
 </body>
 </html>
