--- a/public/index.html
+++ b/public/index.html
@@ -6,68 +6,65 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0d0d0d;
+      font-family: Arial, sans-serif;
+      background-color: #0a0a0a;
       color: #fff;
-      text-align: center;
     }
     header {
-      padding: 20px;
-      background: #111;
-      box-shadow: 0 0 10px #0ff;
+      text-align: center;
+      padding: 30px 0;
     }
     header img {
-      width: 80px;
-      border-radius: 50%;
-      margin-bottom: 10px;
+      width: 100px;
+      height: auto;
     }
     header h1 {
-      margin: 0;
-      font-size: 24px;
-      color: #0ff;
+      font-size: 28px;
+      margin-top: 10px;
+      color: #00f0ff;
+      text-shadow: 0 0 5px #00f0ff;
     }
-    .button-container {
+    .button-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      padding: 30px;
-      max-width: 800px;
+      padding: 20px;
+      max-width: 900px;
       margin: 0 auto;
     }
-    .btn {
-      background: #0ff;
-      color: #000;
+    .button-grid a {
+      display: block;
       padding: 15px;
-      border-radius: 10px;
-      text-decoration: none;
+      background-color: #00f0ff;
+      color: #000;
       font-weight: bold;
-      box-shadow: 0 0 10px #0ff;
-      transition: background 0.3s;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #00f0ff;
+      transition: transform 0.2s ease;
     }
-    .btn:hover {
-      background: #00e6e6;
+    .button-grid a:hover {
+      transform: scale(1.05);
     }
     footer {
-      margin-top: 40px;
-      padding: 10px;
+      text-align: center;
+      padding: 20px;
       font-size: 14px;
-      color: #777;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX">
+    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="DAMX STORE Logo" />
     <h1>DAMX STORE</h1>
-  </header>  <div class="button-container">
-    <a href="produk.html" class="btn">🛒 Produk</a>
-    <a href="qr.html" class="btn">📷 QR Payment</a>
-    <a href="murban.html" class="btn">💀 MURBAN 777</a>
-    <a href="panel.html" class="btn">📦 Panel Data</a>
-    <a href="bug-whatsapp.html" class="btn">💣 Script Bug WhatsApp</a>
-    <a href="checkout.html" class="btn">💳 Checkout</a>
+  </header>  <div class="button-grid">
+    <a href="bug-whatsapp.html">💣 SCRIPT BUG WHATSAPP</a>
+    <a href="panel.html">📡 PANEL BY DAMX</a>
+    <a href="murban.html">🎮 MURBAN 777</a>
   </div>  <footer>
-    From DAMX STORE
+    From DAMX STORE • Semua hak cipta dilindungi oleh tuan empunya
   </footer>
 </body>
 </html>
