--- a/public/bug-whatsapp.html
+++ b/public/bug-whatsapp.html
@@ -2,105 +2,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BUG WHATSAPP - DAMX STORE</title>
+  <title>Script WhatsApp - DAMX STORE</title>
   <style>
     body {
       background-color: #0d0d0d;
-      color: #ffffff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
+      font-family: Arial, sans-serif;
       padding: 20px;
     }
-    h1, h2 {
-      color: #00ffd5;
-    }
-    .section {
-      margin-bottom: 30px;
+    h2 {
+      color: #00ffff;
+      border-bottom: 2px solid #00ffff;
+      padding-bottom: 5px;
     }
     .item {
       background-color: #1a1a1a;
-      border: 1px solid #444;
-      padding: 15px;
+      padding: 10px;
+      margin: 10px 0;
       border-radius: 10px;
-      margin-bottom: 10px;
     }
-    .item span {
-      display: block;
-      color: #00ff88;
-      margin-bottom: 5px;
+    .price {
+      color: #00ffcc;
     }
-    .category-title {
-      margin-bottom: 10px;
-      border-bottom: 1px solid #00ffd5;
-      padding-bottom: 5px;
-    }
-    a.button-back {
-      display: inline-block;
-      margin-top: 20px;
-      background: #00ffd5;
+    button {
+      margin-top: 5px;
+      padding: 5px 10px;
+      background-color: #00ffff;
       color: #000;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #00cccc;
     }
   </style>
 </head>
 <body>
-  <h1>📜 LIST SCRIPT WHATSAPP VIA WA</h1>
-  <div class="section">
-    <div class="item">
-      <span>👑 AMBA CRASH</span>
-      <span>• ENC : RM7</span>
-      <span>• NO ENC : RM10</span>
-      <span>• RESSELER : RM15</span>
-    </div>
-    <div class="item">
-      <span>👺 PSYCHO CRASH</span>
-      <span>• NO ENC : RM10</span>
-      <span>• RESSELER : RM15</span>
-    </div>
-    <div class="item">
-      <span>⚡ NEXSUS</span>
-      <span>• NO UP : RM7</span>
-      <span>• FULL UP : RM10</span>
-    </div>
-    <div class="item">
-      <span>🌪️ VORTEX</span>
-      <span>• NO UP : RM5</span>
-      <span>• FULL UP : RM10</span>
-    </div>
-  </div>  <h1>📜 LIST SCRIPT WHATSAPP VIA TELEGRAM</h1>
-  <div class="section">
-    <div class="item">
-      <span>🀄 MAHJONG</span>
-      <span>• NO UP : RM10</span>
-      <span>• UPDATE 3X : RM14</span>
-      <span>• PERMANENT : RM20</span>
-    </div>
-    <div class="item">
-      <span>🍥 CIKIWIR</span>
-      <span>• NO UP : RM7</span>
-      <span>• FULL UP : RM12</span>
-    </div>
-    <div class="item">
-      <span>💠 TREDICT</span>
-      <span>• FULL UP : RM30</span>
-      <span>• RESSELER : RM40</span>
-    </div>
-    <div class="item">
-      <span>⚡ ZEUS</span>
-      <span>• NO UP : RM11</span>
-      <span>• UPDATE 3X : RM15</span>
-      <span>• PERMANENT : RM25</span>
-    </div>
-    <div class="item">
-      <span>🐉 DRAGON</span>
-      <span>• NO UP : RM4</span>
-      <span>• UPDATE 5X : RM6</span>
-      <span>• UPDATE 7X : RM7</span>
-      <span>• PERMANENT : RM10</span>
-      <span>• RESSELER : RM15</span>
-    </div>
-  </div><a class="button-back" href="index.html">⬅ Kembali ke Halaman Utama</a>
-
+  <h2>📜 LIST SCRIPT WHATSAPP VIA WA</h2>  <div class="item">
+    👑 <b>AMBA CRASH</b><br>
+    <span class="price">ENC: RM7</span><br><button>Add to Cart</button><br>
+    <span class="price">NO ENC: RM10</span><br><button>Add to Cart</button><br>
+    <span class="price">RESSELER: RM15</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    👺 <b>PSYCHO CRASH</b><br>
+    <span class="price">NO ENC: RM10</span><br><button>Add to Cart</button><br>
+    <span class="price">RESSELER: RM15</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    ⚡ <b>NEXSUS</b><br>
+    <span class="price">NO UP: RM7</span><br><button>Add to Cart</button><br>
+    <span class="price">FULL UP: RM10</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    🌪️ <b>VORTEX</b><br>
+    <span class="price">NO UP: RM5</span><br><button>Add to Cart</button><br>
+    <span class="price">FULL UP: RM10</span><br><button>Add to Cart</button>
+  </div>  <h2>📜 LIST SCRIPT WHATSAPP VIA TELEGRAM</h2>  <div class="item">
+    🀄 <b>MAHJONG</b><br>
+    <span class="price">NO UP: RM10</span><br><button>Add to Cart</button><br>
+    <span class="price">UPDATE 3X: RM14</span><br><button>Add to Cart</button><br>
+    <span class="price">PERMANENT: RM20</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    🍥 <b>CIKIWIR</b><br>
+    <span class="price">NO UP: RM7</span><br><button>Add to Cart</button><br>
+    <span class="price">FULL UP: RM12</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    💠 <b>TREDICT</b><br>
+    <span class="price">FULL UP: RM30</span><br><button>Add to Cart</button><br>
+    <span class="price">RESSELER: RM40</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    ⚡ <b>ZEUS</b><br>
+    <span class="price">NO UP: RM11</span><br><button>Add to Cart</button><br>
+    <span class="price">UPDATE 3X: RM15</span><br><button>Add to Cart</button><br>
+    <span class="price">PERMANENT: RM25</span><br><button>Add to Cart</button>
+  </div>  <div class="item">
+    🐉 <b>DRAGON</b><br>
+    <span class="price">NO UP: RM4</span><br><button>Add to Cart</button><br>
+    <span class="price">UPDATE 5X: RM6</span><br><button>Add to Cart</button><br>
+    <span class="price">UPDATE 7X: RM7</span><br><button>Add to Cart</button><br>
+    <span class="price">PERMANENT: RM10</span><br><button>Add to Cart</button><br>
+    <span class="price">RESSELER: RM15</span><br><button>Add to Cart</button>
+  </div>
 </body>
 </html>
